# Pegasus---Discord-Bot

./: Colour Codes.py  Keep_Alive.py  main.py  pyproject.toml
cogs/: 8ball.py  Calculator.py  Chess.py  Country.py  Dictionary.py  Fun.py  Info.py  Lyrics.py  Money.py  Pics.py  Pokedex.py  Space.py
